--- a/Dark/css/musician.css
+++ b/Dark/css/musician.css
@@ -2294,7 +2294,7 @@ p.flv_align_right, div.flv_align_right {
 		margin-top: 0
 	}
 	.grid .post-item, .masonry .post-item {
-		width: 98%!important;
+		width: 48%!important;
 		margin: 0 1% 20px!important;
 	}
 }
@@ -2526,6 +2526,9 @@ button {
 	.index-size {
 		height: 1000px;
 	}
+	.merch_background {
+		width: 60%;
+	}
 }
 
 @media only screen and (min-width: 425px) and (max-width: 600px) {
@@ -2546,7 +2549,10 @@ button {
         margin: auto;
         margin-top: 17em;
         height: 200px
-    }
+	}
+	.merch_background {
+		width: 50%;
+	}
 }
 @media only screen and (min-width: 601px) and (max-width: 767px) {
     #V-Player {
@@ -2566,7 +2572,10 @@ button {
         margin: auto;
         margin-top: 17em;
         height: 200px
-    }
+	}
+	.merch_background {
+		width: 40%;
+	}
 }
 @media only screen and (min-width: 768px) and (max-width: 985px) {
     #V-Player {
@@ -2586,7 +2595,10 @@ button {
         margin: auto;
         margin-top: 29em;
         height: 300px
-    }
+	}
+	.merch_background {
+		width: 30%;
+	}
 }
 @media only screen and (min-width: 986px) and (max-width: 1200px) {
     #V-Player {
@@ -2606,7 +2618,10 @@ button {
         margin: auto;
         margin-top: 47em;
         height: 350px
-    }
+	}
+	.merch_background {
+		width: 30%;
+	}
 }
 @media only screen and (min-width: 1201px) and (max-width: 1439px) {
     .Main-Page {
@@ -2616,7 +2631,10 @@ button {
         margin: auto;
         margin-top: 45em;
         height: 400px
-    }
+	}
+	.merch_background {
+		width: 30%;
+	}
 }
 @media only screen and (min-width: 1440px) and (max-width: 1749px) {
     .Main-Page {
@@ -2626,7 +2644,10 @@ button {
         margin: auto;
         margin-top: 45em;
         height: 450px
-    }
+	}
+	.merch_background {
+		width: 30%;
+	}
 }
 @media only screen and (min-width: 1750px) {
     .Main-Page {
@@ -2636,7 +2657,10 @@ button {
         margin: auto;
         margin-top: 45em;
         height: 450px
-    }
+	}
+	.merch_background {
+		width: 30%;
+	}
 }
 
 .glow-on-hover {
